testdata/fixtures/audit/negative/sql_concat_neg_constant_py.py
def list_users(conn):
    cursor = conn.cursor()
    cursor.execute("SELECT * FROM users")
    return cursor.fetchall()
